Project is finished

--- a/src/containers/App/App.css
+++ b/src/containers/App/App.css
@@ -37,3 +37,11 @@
   display: flex;
 }
 
+.right{
+  width: 30%;
+  padding-top: 10vh;
+  display: flex;
+  flex-flow: wrap column;
+  padding-left: 10vh;
+}
+
