--- a/src/components/InputForm/InputForm.css
+++ b/src/components/InputForm/InputForm.css
@@ -2,7 +2,7 @@
   padding-top: 5%;
   padding-left: 1%;
     background-color: #fff;
-    width: 30%;
+    /* width: 30%; */
   }
 
   input, textarea{
